// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sfc.vue 1`] = `
<script>
export default {
  beforeCreate: {},
  created: {},
  model: {},
  props: {},
  watch: {},
  updated: {},
  data: {},
  computed: {},
  methods: {},
  beforeDestroy: {},
  destroyed: {},
  filters: {},
  mixins: {},
  name: {},
  mounted: {},
  beforeRouteLeave: {},
  components: {},
  directives: {},
};
</script>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<script>
export default {
  name: {},
  mixins: {},
  components: {},
  directives: {},
  filters: {},
  model: {},
  props: {},
  data: {},
  computed: {},
  methods: {},
  watch: {},
  beforeCreate: {},
  created: {},
  mounted: {},
  updated: {},
  beforeDestroy: {},
  destroyed: {},
  beforeRouteLeave: {},
};
</script>

`;

exports[`ts.vue 1`] = `
<script lang="ts">
import Vue from 'vue';

export default Vue.extend({
  beforeCreate: {},
  created: {},
  model: {},
  beforeDestroy: {},
  props: {},
  watch: {},
  updated: {},
  data: {},
  computed: {},
  methods: {},
  destroyed: {},
  mounted: {},
  components: {},
  directives: {},
  filters: {},
  beforeRouteLeave: {},
  mixins: {},
  name: {},
});
</script>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<script lang="ts">
import Vue from "vue";

export default Vue.extend({
  name: {},
  mixins: {},
  components: {},
  directives: {},
  filters: {},
  model: {},
  props: {},
  data: {},
  computed: {},
  methods: {},
  watch: {},
  beforeCreate: {},
  created: {},
  mounted: {},
  updated: {},
  beforeDestroy: {},
  destroyed: {},
  beforeRouteLeave: {},
});
</script>

`;

exports[`vue3ts.vue 1`] = `
<script>
import { defineComponent } from 'vue';

export default defineComponent({
  props: {},
  watch: {},
  methods: {},
  data() {},
  mounted() {},
  setup() {},
  components: {},
  emits: [],
  created() {},
  name: {},
});
</script>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<script>
import { defineComponent } from "vue";

export default defineComponent({
  name: {},
  components: {},
  emits: [],
  props: {},
  setup() {},
  data() {},
  methods: {},
  watch: {},
  created() {},
  mounted() {},
});
</script>

`;
